Fix contrast for the dracula theme

--- a/public/css/themes/dracula.css
+++ b/public/css/themes/dracula.css
@@ -1,19 +1,19 @@
 body {
     --bg_color: #282a36;
     --fg_color: #f8f8f2;
-    --fg_faded: #6272a4;
+    --fg_faded: #818eb6;
     --fg_dark: var(--fg_faded);
     --fg_nav: var(--accent);
 
     --bg_panel: #343746;
-    --bg_elements: #44475a;
+    --bg_elements: #292b36;
     --bg_overlays: #44475a;
     --bg_hover: #2f323f;
 
     --grey: var(--fg_faded);
     --dark_grey: #44475a;
-    --darker_grey: #44475a;
-    --darkest_grey: #44475a;
+    --darker_grey: #3d4051;
+    --darkest_grey: #363948;
     --border_grey: #44475a;
 
     --accent: #bd93f9;
@@ -34,4 +34,8 @@ body {
     --tab_selected: var(--accent);
 
     --profile_stat: #919cbf;
+}
+
+.search-bar > form input::placeholder{
+    color: var(--fg_faded);
 }
